--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Simple JS App</title>
   </head>
   <body>
+    <h1>Pokemon</h1>
     <script src="js/script.js"></script>
   </body>
 </html>
