--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Simple JS App</title>
   </head>
   <body>
-    <h1>Pokemon</h1>
+    <h1>Pokedex</h1>
     <ul class= "pokemon-list"></ul>
     <script src="js/script.js"></script>
   </body>
