--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
     <h1>Pokedex</h1>
     <ul class= "pokemon-list"></ul>
     <script src="js/script.js"></script>
+      <script src="js/promise-polyfill.js"></script>
+      <script src="js/fetch-polyfill.js"></script>
+      <script src="js/script.js"></script>
   </body>
 </html>
