--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/styles.css" />
     <link rel="scriptsheet" type="text/js" href="js/script.js" />
-    <title>Simple JS App</title>
+    <title>Simple JS Pokédex</title>
   </head>
   <body>
     <h1>Pokédex</h1>
