added graphic title

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <link rel="scriptsheet" type="text/js" href="js/script.js" />
     <title>Simple JS Pokédex</title>
   </head>
+  <header>
+    <a href="index.html">
+      <img src="img/pokedex_title.png" alt="title" class="header__item">
+    </a>
   <body>
     <h1>Pokédex</h1>
     <ul class="list-group container">
