created search bar div

--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
     <a href="index.html">
       <img src="img/pokedex_title.png" alt="title" class="header__item">
     </a>
+    <div>
+      <form class="form-inline">
+        <img src="img/pokeball.png" class="pokeball_decoration">
+        <input id="search-input" class="pokemon-search form-control mr-sm-2" type="search" placeholder="Search Pokémon" aria-label="Search">
+        <img src="img/pokeball.png" class="pokeball_decoration2">
+      </form>
+    </div>
+  </header>
+  <br>
   <body>
     <h1>Pokédex</h1>
     <ul class="list-group container">
