--- a/index.html
+++ b/index.html
@@ -50,4 +50,14 @@
     <script src="js/fetch-polyfill.js"></script>
     <script src="js/script.js"></script>
   </body>
+  <footer class="page-footer">
+    <p class="footer-p">Project by BRobinson404</p>
+    <p class="footer-p">See Project on Github</p>
+    <div class="social-media">
+      <!--Github Logo-->
+      <a href="https://github.com/BRobinson404/simple-js-app/">
+      <img src="img/1298743_github_git_logo_social_icon.svg" width="30px" height="30px" alt="Github">
+      </a>
+    </div>
+  </footer>
 </html>
