--- a/index.html
+++ b/index.html
@@ -27,6 +27,16 @@
         <button id="next-button" class="btn btn-primary custom-button">
           <img src="img/next_button.png" height="auto" width="100px" alt="Next" class="pokeball_button">
         </button>
+        <br>
+        <br>
+      </div>
+        <div class="header_text">
+          <!--Github Logo-->
+          <a href="https://github.com/BRobinson404/simple-js-app/" class="header_link">Project by BRobinson404 - See Project on Github
+          </a>
+        </div>
+    </header>
+    <br>
     <ul class="list-group container">
       <div class="pokemon-list row"></div> 
     </ul>
@@ -55,13 +65,5 @@
     <script src="dist/js/script.min.js"></script>
   </body>
   <footer class="page-footer">
-    <p class="footer-p">Project by BRobinson404</p>
-    <p class="footer-p">See Project on Github</p>
-    <div class="social-media">
-      <!--Github Logo-->
-      <a href="https://github.com/BRobinson404/simple-js-app/">
-      <img src="img/1298743_github_git_logo_social_icon.svg" width="30px" height="30px" alt="Github">
-      </a>
-    </div>
   </footer>
 </html>
