--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="shortcut icon" href="img/pokefavicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="dist/css/styles.min.css" />
+    <link rel="stylesheet" type="text/css" href="src/css/styles.css" />
     <title>Simple JS Pokédex</title>
   </head>
   <body>
@@ -15,7 +15,7 @@
         <img src="img/pokedex_title.png" alt="title" class="header__item">
       </a>
       </div>
-      <div>
+      <div class="button-container">
         <!-- Previous Button -->
         <button id="previous-button" class="btn btn-primary custom-button">
           <img src="img/previous_button.png" height="auto" width="100px" alt="Previous" class="pokeball_button">
